Fixed bug on mobile version

--- a/src/css/main_page.css
+++ b/src/css/main_page.css
@@ -1,14 +1,18 @@
 html {
   scroll-behavior: smooth;
+  width: 100%;
 }
 
 body {
   overflow-x: hidden;
+  width: 100%;
+  max-width: 100%;
   background-color: hsla(0, 0%, 90%, 0.882);
   scroll-behavior: smooth;
   min-width: 774px;
   padding-top: 130px;
   margin: 0;
+  transition-duration: 0.2s;
 }
 
 header {
@@ -38,6 +42,7 @@ table {
   left: 0px;
   top: 88%;
   bottom: 10%;
+  z-index: 100;
 }
 
 .github_box a {
@@ -58,18 +63,25 @@ table {
   color: #FFFFFF;
   text-shadow:  1px 1px 5px hsl(0, 0%, 16%);
   background-color:hsl(0, 43%, 41%);
+  border: 2px solid currentColor;
+  border-radius: 0.5rem;
 }
 
-.github_box a img {
+.github_box a img.image {
   position: relative;
   padding-left: 5px;
+  -webkit-filter: drop-shadow(5px 5px 5px #222);
+  filter: drop-shadow(5px 5px 5px #222);
 }
 
 .github_box a:hover {
-  color: hsl(0, 43%, 41%);
-  background-color:#ce8989;
-  text-shadow:  0px 2px 3px #A49C5B;
+  color: hsl(0, 100%, 17%);
+  background-color:#86670000;
+  text-shadow:  0px 2px 3px #ffffff;
   transition-duration: 0.3s;
+  border: 2px solid currentColor;
+  border-radius: 3rem;
+  border-color: #000000;
 }
 
 /*               Navigation section              */
@@ -88,6 +100,7 @@ table {
   background-color: hsl(0, 43%, 41%);
   box-shadow: 0px 0px 35px #770000;
   height: 150px;
+  width: 100%;
   min-height: 60px;
 }
   
@@ -434,6 +447,7 @@ table {
   padding-bottom: 50px;
   text-align: center;
   color: #FFFFFF;
+  width: 100%;
   background-color: rgb(0, 0, 0);
 }
 
